[package]
name = "libexfat"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
byteorder = { version = "1.5.0", default-features = false }
libfs = { path = "../libfs" }
bento = {path = "../bento/rust" }
log = "0.4.21"
hashbrown = { version = "0.15.5", default-features = false, features = ["default-hasher"] }
#nix = { version = "0.29.0", features = ["fs", "ioctl", "user"] }
#time = { version = "0.3.36", features = ["local-offset"] }

[dev-dependencies]
env_logger = "0.11.7"
hex = "0.4.3"
sha2 = "0.10.8"
