[package]
name = "bento"
version = "0.1.0-linux6.1"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>"]

[features]
default = []
capnproto = [ "capnp" ]

[build-dependencies]
bindgen = "*"
cc = "1.0"
shlex = "0.1"

[dependencies]
compiler_builtins = "0.1.160"
datablock = { path = "../../datablock-rs/datablock" }
hash32 = "0.1.1"
paste = "1.0.15"

[dependencies.capnp]
version = "0.13.3"
optional = true
default-features = false

[dependencies.serde]
version = "*"
default-features = false
features = ["alloc", "derive"]
